refactored css to use grid instead of flex 1, fixes alignment with header to body

--- a/src/apps/seo/src/views/RedirectsManager/RedirectsTable/RedirectCreator/RedirectCreator.less
+++ b/src/apps/seo/src/views/RedirectsManager/RedirectsTable/RedirectCreator/RedirectCreator.less
@@ -2,11 +2,12 @@
 @import "~@zesty-io/core/typography.less";
 
 .RedirectCreator {
-  align-items: center;
-  display: flex;
   background: lighten(@zesty-light-blue, 10%);
   border-radius: 4px 4px 0 0;
   margin: 0;
+  display: grid;
+  grid-template-columns: minmax(200px, 1fr) auto auto minmax(200px, 1fr) auto auto;
+  gap: 0 16px;
 
   .RedirectCreatorCell:nth-child("odd") {
     flex: 1;
@@ -16,10 +17,6 @@
     display: flex;
     padding: 16px;
     align-items: center;
-
-    &.RedirectCreatorCellExpand {
-      flex: 1;
-    }
 
     .SearchBar {
       flex: 1;
